kubeapps/policy.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: kubeapps
spec:
  mtls:
    mode: PERMISSIVE
