kubeapps/gateway.yml
#@ load("@ytt:data", "data")

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeapps-gateway
  namespace: kubeapps
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
        mode: SIMPLE
        credentialName: wildcard-tls
    hosts:
    - #@ data.values.kubeapps_hostname
