kubeapps/ingress.yml
#@ load("@ytt:data", "data")

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapps
  namespace: kubeapps
spec:
  rules:
  - host: #@ data.values.kubeapps_hostname
    http:
      paths:
      - backend:
          serviceName: kubeapps
          servicePort: http
        path: /
  tls:
  - hosts:
    - #@ data.values.kubeapps_hostname
    secretName: kubeapps-tls
