kubeapps/virtualservice.yml
#@ load("@ytt:data", "data")

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubeapps-virtual-service
  namespace: kubeapps
spec:
  hosts:
    - #@ data.values.kubeapps_hostname
  gateways:
    - kubeapps-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kubeapps
        port:
          number: 80
